--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,14 @@
   "icons": {
     "48": "icons/vid-48.png",
     "900": "icons/vid-900.png"
-  }, 
+  },
+
+  "applications": {
+    "gecko": {
+      "id": "vid-url-copy@pietrek_xD",
+      "strict_min_version": "42.0"
+    }
+  },
 
   "browser_action": {
     "default_icon": "icons/vid-48.png",
